---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    ConvertLoopToAny: return any(check(x) for x in iterable)
  location:
    row: 2
    column: 4
  end_location:
    row: 4
    column: 23
  fix:
    content: return any(check(x) for x in iterable)
    location:
      row: 2
      column: 4
    end_location:
      row: 5
      column: 16
  parent: ~

